# Deposit-Proxies-on-Sepolia

./: .env.example  .gitignore  README.md  hardhat.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
app/app/: layout.tsx  page.tsx
contracts/: DeterministicProxyDeployer.sol  FundRouter.sol  FundRouterStorage.sol  IFundRouter.sol  TestERC20.sol
deployments/: sepolia-1780649928874.json
rust-backend/: Cargo.toml
rust-backend/src/: create2.rs  db.rs  eth.rs  lib.rs  main.rs  models.rs  ws_handler.rs
rust-backend/src/handlers/: deposit.rs  deposits.rs  mod.rs  router.rs
scripts/: deploy.ts
test/: FundRouter.unit.test.ts
