[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
default-run = "rust-backend"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = "1.0.228"
serde_json = "1.0.150"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha3 = "0.10"
hex = "0.4"
dotenvy = "0.15"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
ethers = "2"
